implement direct navigation json request with shared secret
Signed-off-by: Julien Veyssier <eneiluj@posteo.net>

--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,8 @@
     "nextcloud/coding-standard": "^0.5.0",
     "symfony/event-dispatcher": "^4",
     "phpunit/phpunit": "^9.5"
+  },
+  "require": {
+    "firebase/php-jwt": "^5.2"
   }
 }
