rename the app from integration_phoenix to integration_swp
Signed-off-by: Julien Veyssier <julien-nc@posteo.net>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ jobs:
   build:
     name: Build and upload release in GitHub
     env:
-      APP_ID: integration_phoenix
+      APP_ID: integration_swp
     runs-on: ubuntu-latest
     steps:
       - name: Use Node 16
