--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "integration_phoenix",
+	"name": "integration_swp",
 	"version": "0.3.3",
-	"description": "Phoenix SPS BMI",
+	"description": "SWP",
 	"main": "index.js",
 	"directories": {
 		"test": "tests"
@@ -18,7 +18,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/nextcloud-gmbh/integration_phoenix"
+		"url": "https://github.com/nextcloud-gmbh/integration_swp"
 	},
 	"keywords": [
 		"cospend"
@@ -26,9 +26,9 @@
 	"author": "Julien Veyssier",
 	"license": "AGPL-3.0",
 	"bugs": {
-		"url": "https://github.com/nextcloud-gmbh/integration_phoenix/issues"
+		"url": "https://github.com/nextcloud-gmbh/integration_swp/issues"
 	},
-	"homepage": "https://github.com/nextcloud-gmbh/integration_phoenix",
+	"homepage": "https://github.com/nextcloud-gmbh/integration_swp",
 	"browserslist": [
 		"extends @nextcloud/browserslist-config"
 	],
