--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,8 +46,9 @@ jobs:
           echo "##[set-output name=app_id;]$APP_ID"
           echo "###### copy certificate"
           mkdir -p ~/.nextcloud/certificates
-          # echo "$APP_CRT" > ~/.nextcloud/certificates/${APP_ID}.crt
-          # echo "$APP_KEY" > ~/.nextcloud/certificates/${APP_ID}.key
+          wget --quiet "https://github.com/nextcloud/app-certificate-requests/raw/master/${APP_ID}/${APP_ID}.crt" -O ~/.nextcloud/certificates/${APP_ID}.crt
+          ## echo "$APP_CRT" > ~/.nextcloud/certificates/${APP_ID}.crt
+          echo "$APP_KEY" > ~/.nextcloud/certificates/${APP_ID}.key
           echo "###### install dependencies"
           export DEBIAN_FRONTEND=noninteractive
           sudo apt update -y
@@ -68,9 +69,9 @@ jobs:
           version=${tag/v/}
           webserveruser=runner occ_dir=~/html/nextcloud version=$version make build_release
           echo "##[set-output name=version;]$version"
-        #env:
+        env:
+          APP_KEY: ${{ secrets.APP_KEY }}
         #  APP_CRT: ${{ secrets.APP_CRT }}
-        #  APP_KEY: ${{ secrets.APP_KEY }}
 
       - name: Attach tarball to github release
         uses: svenstaro/upload-release-action@2b9d2847a97b04d02ad5c3df2d3a27baa97ce689 # v2
