--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,8 +48,7 @@ jobs:
           echo "###### copy certificate"
           mkdir -p ~/.nextcloud/certificates
           wget --quiet "https://github.com/nextcloud/app-certificate-requests/raw/master/${APP_ID}/${APP_ID}.crt" -O ~/.nextcloud/certificates/${APP_ID}.crt
-          ## echo "$APP_CRT" > ~/.nextcloud/certificates/${APP_ID}.crt
-          echo "$APP_KEY" > ~/.nextcloud/certificates/${APP_ID}.key
+          echo "$APP_PRIVATE_KEY" > ~/.nextcloud/certificates/${APP_ID}.key
           echo "###### install dependencies"
           export DEBIAN_FRONTEND=noninteractive
           sudo apt update -y
@@ -71,8 +70,7 @@ jobs:
           webserveruser=runner occ_dir=~/html/nextcloud version=$version make build_release
           echo "##[set-output name=version;]$version"
         env:
-          APP_KEY: ${{ secrets.APP_KEY }}
-          #  APP_CRT: ${{ secrets.APP_CRT }}
+          APP_PRIVATE_KEY: ${{ secrets.APP_PRIVATE_KEY }}
 
       - name: Attach tarball to github release
         uses: svenstaro/upload-release-action@2b9d2847a97b04d02ad5c3df2d3a27baa97ce689 # v2
