--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,12 +1,13 @@
-on:
-  push:
-    branches: [release]
-
 name: Create release archive
+
+on:
+  release:
+    types: [published]
 
 jobs:
   build:
     name: Build and upload release in GitHub
+    environment: release
     env:
       APP_ID: integration_phoenix
     runs-on: ubuntu-latest
@@ -72,29 +73,15 @@ jobs:
         #  APP_CRT: ${{ secrets.APP_CRT }}
         #  APP_KEY: ${{ secrets.APP_KEY }}
 
-      - name: Create Release
-        if: ${{ startsWith( steps.tag.outputs.currenttag , 'v' ) }}
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Attach tarball to github release
+        uses: svenstaro/upload-release-action@2b9d2847a97b04d02ad5c3df2d3a27baa97ce689 # v2
+        id: attach_to_release
         with:
-          tag_name: ${{ steps.tag.outputs.currenttag }}
-          release_name: ${{ steps.tag.outputs.currenttag }}
-          draft: false
-          prerelease: false
-
-      - name: Upload Release Asset
-        if: ${{ startsWith( steps.tag.outputs.currenttag , 'v' ) }}
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: /tmp/build/${{ steps.build_release.outputs.app_id }}-${{ steps.build_release.outputs.version }}.tar.gz
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: /tmp/build/${{ steps.build_release.outputs.app_id }}-${{ steps.build_release.outputs.version }}.tar.gz
           asset_name: ${{ steps.build_release.outputs.app_id }}-${{ steps.build_release.outputs.version }}.tar.gz
-          asset_content_type: application/gzip
+          tag: ${{ github.ref }}
+          overwrite: true
 
       #- name: Publish normal release to appstore
       #  if: ${{ startsWith( steps.tag.outputs.currenttag , 'v' ) && !endsWith( steps.tag.outputs.currenttag , 'nightly' ) }}
