--- a/composer.json
+++ b/composer.json
@@ -1,53 +1,36 @@
 {
-  "name": "nextcloud/integration_swp",
-  "description": "Sovereign Workplace integration app",
-  "license": "AGPL3",
-  "config": {
-    "platform": {
-      "php": "8.0"
-    },
-    "optimize-autoloader": true,
-    "classmap-authoritative": true,
-    "allow-plugins": {
-      "bamarni/composer-bin-plugin": true
-    }
-  },
-  "scripts": {
-    "cs:fix": "php-cs-fixer fix",
-    "cs:check": "php-cs-fixer fix --dry-run --diff",
-    "lint": "find . -name \\*.php -not -path './vendor/*' -exec php -l \"{}\" \\;",
-    "test:unit": "phpunit -c tests/phpunit.xml",
-    "post-install-cmd": [
-      "@composer bin all install --ansi",
-      "\"vendor/bin/mozart\" compose",
-      "composer dump-autoload"
-    ],
-    "post-update-cmd": [
-      "@composer bin all install --ansi",
-      "\"vendor/bin/mozart\" compose",
-      "composer dump-autoload"
-    ]
-  },
-  "require": {
-    "firebase/php-jwt": "^6.8.1",
-    "bamarni/composer-bin-plugin": "^1.4"
-  },
-  "require-dev": {
-    "nextcloud/coding-standard": "^1.0.0",
-    "symfony/event-dispatcher": "^4",
-    "phpunit/phpunit": "^9.5",
-    "coenjacobs/mozart": "^0.7.1"
-  },
-  "extra": {
-    "mozart": {
-      "dep_namespace": "OCA\\Swp\\Vendor\\",
-      "dep_directory": "/lib/Vendor/",
-      "classmap_directory": "/lib/autoload/",
-      "classmap_prefix": "NEXTCLOUD_INTEGRATION_SWP_",
-      "packages": [
-        "firebase/php-jwt"
-      ],
-      "delete_vendor_directories": true
-    }
-  }
+	"name": "nextcloud/integration_swp",
+	"authors": [
+		{
+			"name": "Julien Veyssier",
+			"email": "julien-nc@posteo.net"
+		}
+	],
+	"description": "Sovereign Workplace integration app",
+	"license": "AGPL3",
+	"config": {
+		"platform": {
+			"php": "8.0"
+		},
+		"allow-plugins": {
+			"bamarni/composer-bin-plugin": true
+		}
+	},
+	"require": {
+		"php": "^8.0",
+		"firebase/php-jwt": "^6.8.1"
+	},
+	"scripts": {
+		"lint": "find . -name \\*.php -not -path './vendor/*' -exec php -l \"{}\" \\;",
+		"cs:fix": "php-cs-fixer fix",
+		"cs:check": "php-cs-fixer fix --dry-run --diff",
+		"test:unit": "phpunit -c tests/phpunit.xml",
+		"psalm": "psalm.phar --no-cache"
+	},
+	"require-dev": {
+		"nextcloud/coding-standard": "^1.0.0",
+		"psalm/phar": "^5.16",
+		"nextcloud/ocp": "dev-master",
+		"phpunit/phpunit": "^9.5"
+	}
 }
