bring mozart back to stay close to user_oidc implementation, fix the mozart+nextcloud/ocp version conflict
Signed-off-by: Julien Veyssier <julien-nc@posteo.net>

--- a/composer.json
+++ b/composer.json
@@ -1,36 +1,62 @@
 {
 	"name": "nextcloud/integration_swp",
+	"description": "Sovereign Workplace integration app",
 	"authors": [
 		{
 			"name": "Julien Veyssier",
 			"email": "julien-nc@posteo.net"
 		}
 	],
-	"description": "Sovereign Workplace integration app",
 	"license": "AGPL3",
 	"config": {
 		"platform": {
 			"php": "8.0"
 		},
+		"optimize-autoloader": true,
+		"classmap-authoritative": true,
 		"allow-plugins": {
 			"bamarni/composer-bin-plugin": true
 		}
 	},
-	"require": {
-		"php": "^8.0",
-		"firebase/php-jwt": "^6.8.1"
-	},
 	"scripts": {
-		"lint": "find . -name \\*.php -not -path './vendor/*' -exec php -l \"{}\" \\;",
 		"cs:fix": "php-cs-fixer fix",
 		"cs:check": "php-cs-fixer fix --dry-run --diff",
+		"lint": "find . -name \\*.php -not -path './vendor/*' -exec php -l \"{}\" \\;",
 		"test:unit": "phpunit -c tests/phpunit.xml",
-		"psalm": "psalm.phar --no-cache"
+		"psalm": "psalm.phar --no-cache",
+		"post-install-cmd": [
+			"@composer bin all install --ansi",
+			"\"vendor/bin/mozart\" compose",
+			"composer dump-autoload"
+		],
+		"post-update-cmd": [
+			"@composer bin all install --ansi",
+			"\"vendor/bin/mozart\" compose",
+			"composer dump-autoload"
+		]
+	},
+	"require": {
+		"php": "^8.0",
+		"firebase/php-jwt": "^6.8.1",
+		"bamarni/composer-bin-plugin": "^1.4"
 	},
 	"require-dev": {
 		"nextcloud/coding-standard": "^1.0.0",
-		"psalm/phar": "^5.16",
+		"symfony/event-dispatcher": "^4",
+		"phpunit/phpunit": "^9.5",
 		"nextcloud/ocp": "dev-master",
-		"phpunit/phpunit": "^9.5"
+		"psalm/phar": "^5.16"
+	},
+	"extra": {
+		"mozart": {
+			"dep_namespace": "OCA\\Swp\\Vendor\\",
+			"dep_directory": "/lib/Vendor/",
+			"classmap_directory": "/lib/autoload/",
+			"classmap_prefix": "NEXTCLOUD_INTEGRATION_SWP_",
+			"packages": [
+				"firebase/php-jwt"
+			],
+			"delete_vendor_directories": true
+		}
 	}
 }
