--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
 		"@nextcloud/event-bus": "^3.0.0",
 		"@nextcloud/initial-state": "^2.0.0",
 		"@nextcloud/l10n": "^2.1.0",
-		"@nextcloud/moment": "^1.2.1",
-		"@nextcloud/router": "^2.0.0",
+		"@nextcloud/moment": "1.2.2",
+		"@nextcloud/router": "^3.0.0",
 		"@nextcloud/vue": "^8.3.0",
 		"@nextcloud/vue-dashboard": "^2.0.1",
 		"vue": "^2.6.14",
@@ -59,6 +59,6 @@
 		"@nextcloud/stylelint-config": "^2.1.2",
 		"@nextcloud/webpack-vue-config": "^6.0.0",
 		"eslint-webpack-plugin": "^4.0.0",
-		"stylelint-webpack-plugin": "^4.1.0"
+		"stylelint-webpack-plugin": "^5.0.0"
 	}
 }
