--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
 		"@nextcloud/dialogs": "^5.0.3",
 		"@nextcloud/event-bus": "^3.0.0",
 		"@nextcloud/initial-state": "^2.0.0",
-		"@nextcloud/l10n": "^2.1.0",
-		"@nextcloud/moment": "1.2.2",
+		"@nextcloud/l10n": "^3.1.0",
+		"@nextcloud/moment": "^1.3.1",
 		"@nextcloud/router": "^3.0.0",
 		"@nextcloud/vue": "^8.3.0",
 		"@nextcloud/vue-dashboard": "^2.0.1",
