--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,8 @@
 		"lint": "find . -name \\*.php -not -path './vendor/*' -exec php -l \"{}\" \\;",
 		"test:unit": "phpunit -c tests/phpunit.xml",
 		"psalm": "psalm.phar --no-cache",
+		"psalm:update-baseline": "psalm.phar --threads=1 --update-baseline",
+        "psalm:update-baseline:force": "psalm.phar --threads=1 --update-baseline --set-baseline=tests/psalm-baseline.xml",
 		"post-install-cmd": [
 			"@composer bin all install --ansi",
 			"\"vendor/bin/mozart\" compose",
@@ -45,7 +47,7 @@
 		"symfony/event-dispatcher": "^4",
 		"phpunit/phpunit": "^9.5",
 		"nextcloud/ocp": "dev-master",
-		"psalm/phar": "^5.16"
+		"psalm/phar": "6.7.x"
 	},
 	"extra": {
 		"mozart": {
