--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,6 @@
 	],
 	"license": "AGPL3",
 	"config": {
-		"platform": {
-			"php": "8.0"
-		},
 		"optimize-autoloader": true,
 		"classmap-authoritative": true,
 		"allow-plugins": {
@@ -45,7 +42,7 @@
 		"symfony/event-dispatcher": "^4",
 		"phpunit/phpunit": "^9.5",
 		"nextcloud/ocp": "dev-master",
-		"psalm/phar": "6.4.0"
+		"psalm/phar": "6.7.x"
 	},
 	"extra": {
 		"mozart": {
