--- a/package.json
+++ b/package.json
@@ -39,17 +39,14 @@
 	"dependencies": {
 		"@nextcloud/auth": "^2.0.0",
 		"@nextcloud/axios": "^2.0.0",
-		"@nextcloud/dialogs": "^6.0.1",
+		"@nextcloud/dialogs": "^7.0.0-rc.1",
 		"@nextcloud/event-bus": "^3.0.0",
 		"@nextcloud/initial-state": "^2.0.0",
 		"@nextcloud/l10n": "^3.1.0",
 		"@nextcloud/moment": "^1.3.1",
 		"@nextcloud/router": "^3.0.0",
-		"@nextcloud/vue": "^8.3.0",
-		"@nextcloud/vue-dashboard": "^2.0.1",
-		"vue": "^2.6.14",
-		"vue-click-outside": "^1.1.0",
-		"vue-clipboard2": "^0.3.3",
+		"@nextcloud/vue": "^9.0.0-rc.2",
+		"vue": "^3.5.17",
 		"vue-material-design-icons": "^5.0.0"
 	},
 	"devDependencies": {
@@ -58,7 +55,7 @@
 		"@nextcloud/eslint-config": "^8.0.0",
 		"@nextcloud/stylelint-config": "^3.0.1",
 		"@nextcloud/webpack-vue-config": "^6.0.0",
-		"eslint-webpack-plugin": "^4.0.0",
+		"eslint-webpack-plugin": "^4.2.0",
 		"stylelint-webpack-plugin": "^5.0.0"
 	}
 }
